# logger

./: .cmake-format  .cspell.yaml  .cspell.yml  .gitignore  CMakeLists.txt  CMakePresets.json  Jenkinsfile  LICENSE  README.md  logger-config-version.cmake  logger-config.cmake  requirements.cmake
.github/workflows/: cpp_unit_tests.yml  generate_artifacts.yml  on_push.yml  unit_tests.yml
cmake/: component_install.cmake  install.cmake  install_header_licenses.cmake  logger-config_template.cmake  logger_install.cmake  logger_utils.cmake  requirements.cmake
src/: CMakeLists.txt  logger.c
src/include/embetech/: logger.h
tests/: CMakeLists.txt
tests/ut01_mvp/: CMakeLists.txt  ut01_mvp.c  ut01_mvp.cpp
tests/ut02_timestamps/: CMakeLists.txt  ut02_1_timestamp.cpp  ut02_2_human_readable_timestamp.cpp
tests/ut03_affixes/: CMakeLists.txt  ut03_1_affixes_no_timestamp.cpp  ut03_2_affixes_timestamp.cpp
tests/ut04_runtime_verbosity/: CMakeLists.txt  ut04_runtime_verbosity.cpp
tests/ut05_location/: CMakeLists.txt  ut05_1_location.c  ut05_1_location.cpp  ut05_2_location_timestamp.cpp  ut05_3_location_timestamp_affix.cpp
tests/ut06_thread_safety/: CMakeLists.txt  ut06_thread_safety.cpp
tests/ut07_flush_hooks/: CMakeLists.txt  ut07_flush_hooks.cpp
tests/ut08_mixed/: CMakeLists.txt  disabling_channel_at_ct.cpp  disabling_logger_at_ct.cpp  format_support.cpp  logger_config.h
tests/ut09_logger_utils/: CMakeLists.txt  ut09_logger_utils.cpp
