add_library(logger STATIC)
add_library(embetech::logger ALIAS logger)
target_compile_features(logger PUBLIC c_std_99)

target_sources(
  logger
  PRIVATE logger.c third_party/printf.c
  PUBLIC FILE_SET HEADERS BASE_DIRS include FILES include/embetech/logger.h
  PRIVATE FILE_SET
          private_headers
          TYPE
          HEADERS
          BASE_DIRS
          third_party
          FILES
          third_party/printf.h
)

message(
  DEBUG
  "Selected logger options:
- LOGGER_FP_SUPPORT: ${LOGGER_FP_SUPPORT}
- LOGGER_PTRDIFF_SUPPORT: ${LOGGER_PTRDIFF_SUPPORT}
- LOGGER_EXPONENT_SUPPORT ${LOGGER_EXPONENT_SUPPORT}
- LOGGER_TIMESTAMPS: ${LOGGER_TIMESTAMPS}
- LOGGER_HUMAN_READABLE_TIMESTAMP: ${LOGGER_HUMAN_READABLE_TIMESTAMP}
- LOGGER_CUSTOM_AFFIXES: ${LOGGER_CUSTOM_AFFIXES}
- LOGGER_RUNTIME_VERBOSITY: ${LOGGER_RUNTIME_VERBOSITY}
- LOGGER_HEADER_WITH_LOCATION: ${LOGGER_HEADER_WITH_LOCATION}
- LOGGER_THREAD_SAFETY_HOOKS: ${LOGGER_THREAD_SAFETY_HOOKS}
- LOGGER_FLUSH_HOOKS: ${LOGGER_FLUSH_HOOKS}
- LOGGER_VERBOSE_ERRORS: ${LOGGER_VERBOSE_ERRORS}
- LOGGER_TESTS: ${LOGGER_TESTS}"
)

target_compile_definitions(
  logger
  PRIVATE PRINTF_SUPPORT_FLOAT=$<BOOL:${LOGGER_FP_SUPPORT}>
          PRINTF_SUPPORT_EXPONENTIAL=$<BOOL:${LOGGER_EXPONENT_SUPPORT}>
          PRINTF_SUPPORT_PTRDIFF_T=$<BOOL:${LOGGER_PTRDIFF_SUPPORT}>
          LOGGER_TIMESTAMPS=$<BOOL:${LOGGER_TIMESTAMPS}>
          LOGGER_HUMAN_READABLE_TIMESTAMP=$<BOOL:${LOGGER_HUMAN_READABLE_TIMESTAMP}>
  PUBLIC LOGGER_CUSTOM_AFFIXES=$<BOOL:${LOGGER_CUSTOM_AFFIXES}>
         LOGGER_RUNTIME_VERBOSITY=$<BOOL:${LOGGER_RUNTIME_VERBOSITY}>
         LOGGER_HEADER_WITH_LOCATION=$<BOOL:${LOGGER_HEADER_WITH_LOCATION}>
         LOGGER_THREAD_SAFETY_HOOKS=$<BOOL:${LOGGER_THREAD_SAFETY_HOOKS}>
         LOGGER_FLUSH_HOOKS=$<BOOL:${LOGGER_FLUSH_HOOKS}>
         LOGGER_VERBOSE_ERRORS=$<BOOL:${LOGGER_VERBOSE_ERRORS}>
)
